# Tobii-Pro-Interaction-Web

./: README.md  pyproject.toml
src/: app.py  eye_tracker.py  gaze_filter.py  models.py
